# portfolio

./: Cargo.toml  Trunk.toml  index.html
frontend/: index.html
frontend/js/: index.js  utils.js
frontend/js/classes/: Cursor.js  EventEmitter.js  Focusable.js  InputManager.js  Loader.js  Position.js
frontend/styles/: cursor.css  index.css  utils.css
public/: styles.css
src/: lib.rs  main.rs  shader.wgsl
src/components/: canvas.rs
src/utils/: vertex.rs
