[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.31"
leptos = { version = "0.7.7", features = ["csr"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
wgpu = { version = "24.0.1", features = ["webgl"] }
